# curl-feedstock

./: .recipe_maintainers.json  .travis.yml  README.md  appveyor.yml  conda-forge.yml
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-win.yml
.ci_support/: linux_.yaml  linux_64_.yaml  linux_64_openssl1.1.1.yaml  linux_64_openssl3.yaml  linux_aarch64_.yaml  linux_aarch64_openssl1.1.1.yaml  linux_aarch64_openssl3.yaml  linux_c_compilergcc.yaml  linux_c_compilergcccxx_compilergxx.yaml  linux_c_compilertoolchain_c.yaml  linux_c_compilertoolchain_ccxx_compilertoolchain_cxx.yaml  linux_ppc64le_.yaml  linux_ppc64le_openssl1.1.1.yaml  linux_ppc64le_openssl3.yaml  osx_.yaml  osx_64_.yaml  osx_64_openssl1.1.1.yaml  osx_64_openssl3.yaml  osx_arm64_.yaml  osx_arm64_openssl1.1.1.yaml  osx_arm64_openssl3.yaml  osx_c_compilerclang.yaml  osx_c_compilerclangcxx_compilerclangxx.yaml  osx_c_compilertoolchain_c.yaml  osx_c_compilertoolchain_ccxx_compilertoolchain_cxx.yaml  win_.yaml  win_64_.yaml  win_arm64_.yaml  win_c_compilervs2008.yaml  win_c_compilervs2008cxx_compilervs2008.yaml  win_c_compilervs2015.yaml  win_c_compilervs2015cxx_compilervs2015.yaml
.github/: CODEOWNERS
.scripts/: build_steps.sh  run_osx_build.sh
ci_support/: run_docker_build.sh
recipe/: bld.bat  build.sh  install.bat  install.sh  install_dll.bat  install_static.bat  meta.yaml
recipe/test/: CMakeLists.txt  test.c
